<resources>
    <string name="app_name">라이푸</string>
    <string name="kakao_app_key">b3e5ebb2bf963fa90f8ab1b1671df957</string>
    <string name="kakao_scheme">kakaob3e5ebb2bf963fa90f8ab1b1671df957</string>
    <string name="kakaolink_host">kakaolink</string>



    <string name="loading">로딩중입니다.</string>
    <string name="confirm">확인</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="login_error">로그인 도중 오류가 발생했습니다.</string>
    <string name="session_error">세션이 닫혔습니다. 다시 시도해주세요.</string>
    <string name="social_login_welcome">라이푸에 오신 것을 환영합니다!</string>
    <string name="social_login_welcome_eng">LIFE IS FOOD !</string>
    <string name="social_login_welcome_info">소셜 로그인을 통해 간편하게 회원가입하세요.</string>
    <string name="register_info_1">재설정을 원하시면 ‘다시 뽑기\'를 눌러주세요.</string>
    <string name="register_info_2">닉네임을 직접 입력하고 싶으시다면\n마이페이지에서 수정 가능합니다.</string>
    <string name="register_btn_txt">가입 완료</string>
    <string name="splash_info">세상의 모든 음식이 한 곳에</string>
    <string name="alert_title">알림</string>
    <string name="hot_posts">핫 게시물</string>
    <string name="new_post">새 게시물</string>
    <string name="complete">완료</string>
    <string name="new_post_title_hint">제목을 입력해주세요</string>
    <string name="new_post_content_hint">내용을 입력해주세요</string>
    <string name="comment_report">신고하기</string>
    <string name="comment_re">댓글 달기</string>
    <string name="post_delete_dialog_1">한번 삭제한 게시물은 복구가 불가합니다.\n정말 삭제하시겠습니까?</string>
    <string name="post_delete_dialog_2">삭제가 완료되었습니다. 감사합니다.</string>
    <string name="back">취소</string>
    <string name="delete">삭제</string>
    <string name="post_declartion_dialog_1">한번 신고하시면 취소가 불가능합니다.\n정말 신고하시겠습니까?</string>
    <string name="post_declartion_dialog_2">신고가 완료되었습니다. 감사합니다.</string>
    <string name="search_hint">찾으시는 음식을 검색하세요</string>
    <string name="search_recent">최근 검색</string>
    <string name="reaction_received">내가 받은 리액션</string>
    <string name="my_post">내 게시물 보기</string>
    <string name="edit_post">게시물 수정</string>
    <string name="delete_post">게시물 삭제</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="new_post_title">새 게시물</string>
    <string name="next">다음</string>
    <string name="enter_title">제목을 입력해주세요</string>
    <string name="enter_contents">내용을 입력해주세요</string>
    <string name="modify_nickname">닉네임 수정</string>
    <string name="modify_nickname_info">닉네임은 최대 6글자로 설정가능합니다.\n형용사와 음식 이름 조합을 권장드려요!</string>
    <string name="enter_hint">댓글 입력...</string>
    <string name="post">게시</string>
    <string name="edit">수정</string>
    <string name="post_managment">게시물 관리</string>
    <string name="share_post">공유하기</string>
    <string name="kakaotalk">카카오톡</string>
    <string name="report_post">신고</string>
    <string name="already_report">이미 신고한 게시물입니다.</string>

</resources>
