<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/post_report_dialog_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="@string/post_declartion_dialog_1"
        android:textColor="@color/colorBlack" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_cjkkr_medium"
                android:includeFontPadding="false"
                android:letterSpacing="0.11"
                android:lineSpacingExtra="10sp"
                android:padding="12dp"
                android:text="@string/back"
                android:textColor="#6200ee"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/btnReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_cjkkr_medium"
                android:includeFontPadding="false"
                android:letterSpacing="0.11"
                android:lineSpacingExtra="10sp"
                android:padding="12dp"
                android:text="@string/report_post"
                android:textColor="#6200ee"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/noto_sans_cjkkr_medium"
            android:includeFontPadding="false"
            android:letterSpacing="0.11"
            android:lineSpacingExtra="10sp"
            android:padding="12dp"
            android:text="@string/confirm"
            android:textColor="#6200ee"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="invisible" />

    </RelativeLayout>


</LinearLayout>