<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/post_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/noto_sans_cjkkr_medi"
        android:includeFontPadding="false"
        android:letterSpacing="-0.02"
        android:text="@string/post_managment"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/btn_post_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/noto_sans_cjkkr"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:letterSpacing="-0.02"
        android:text="@string/edit_post"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/btn_post_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/noto_sans_cjkkr"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:letterSpacing="-0.02"
        android:text="@string/delete_post"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@drawable/cancel_btn" />

</LinearLayout>