<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.PhotoPostActivity.PhotoPostActivity">

    <ImageView
        android:id="@+id/photo_post_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/photo_post_tv_complete_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/photo_post_back_iv"
        app:layout_constraintBottom_toBottomOf="@id/photo_post_back_iv"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/noto_sans_cjkkr_medium"
        android:text="@string/complete"
        android:textColor="@color/colorMain"/>


    <TextView
        android:id="@+id/photo_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post_title"
        android:fontFamily="@font/noto_sans_cjkkr_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/photo_post_back_iv"
        app:layout_constraintBottom_toBottomOf="@id/photo_post_back_iv"
        app:layout_constraintLeft_toRightOf="@id/photo_post_back_iv"
        android:layout_marginLeft="36dp"/>


    
    <ScrollView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/photo_post_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_post_user_img"
                android:layout_width="360dp"
                android:layout_height="360dp"
                android:src="@drawable/food_image"/>

            <EditText
                android:id="@+id/photo_post_et_title"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_cjkkr_medium"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:hint="@string/enter_title"
                android:textColorHint="@color/colorDarkGray"/>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorLightGray"/>

            <EditText
                android:id="@+id/photo_post_et_contents"
                android:layout_width="360dp"
                android:layout_height="720dp"
                android:fontFamily="@font/noto_sans_cjkkr_medium"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:hint="@string/enter_contents"
                android:textColorHint="@color/colorDarkGray"/>

        </LinearLayout>



    </ScrollView>


    <TextView
        android:id="@+id/photo_post_tv_complete_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/complete"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/noto_sans_cjkkr"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginBottom="25dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>