<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/photo_pick_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"/>

    <!--    현재 상태에 따라 아이콘 모양이 바뀌고, 하는 일도 달라야함. -->
    <ImageView
        android:id="@+id/photo_pick_change_action_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_photo"
        app:tint="@color/colorBlack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"/>



    <TextView
        android:id="@+id/photo_pick_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post_title"
        android:fontFamily="@font/noto_sans_cjkkr_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/photo_pick_back_iv"
        app:layout_constraintBottom_toBottomOf="@id/photo_pick_back_iv"
        app:layout_constraintLeft_toRightOf="@id/photo_pick_back_iv"
        android:layout_marginLeft="36dp"/>


    
    <ScrollView
        android:layout_width="360dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/photo_pick_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_pick_user_img"
                android:layout_width="360dp"
                android:layout_height="360dp"
                android:scaleType="fitXY"
                android:background="@color/colorLightGray"/>

            <EditText
                android:id="@+id/photo_pick_et_title"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_cjkkr_medium"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:hint="@string/enter_title"
                android:textColorHint="@color/colorDarkGray"/>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorLightGray"/>

            <EditText
                android:id="@+id/photo_pick_et_contents"
                android:layout_width="360dp"
                android:layout_height="400dp"
                android:gravity="top"
                android:fontFamily="@font/noto_sans_cjkkr_medium"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:hint="@string/enter_contents"
                android:textColorHint="@color/colorDarkGray"/>

            <TextView
                android:id="@+id/photo_pick_tv_complete_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_50"
                android:layout_gravity="center_horizontal"
                android:text="@string/complete"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/noto_sans_cjkkr"
                android:textSize="13sp"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="100dp" />

        </LinearLayout>



    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>