<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <ImageView-->
        <!--            android:id="@+id/logoImage"-->
        <!--            android:layout_width="160dp"-->
        <!--            android:layout_height="146dp"-->
        <!--            android:layout_marginTop="102dp"-->
        <!--            android:layout_marginBottom="12dp"-->
        <!--            android:src="@drawable/logo"-->
        <!--            android:contentDescription="desc"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/icon_back_24" />

            <TextView
                android:id="@+id/hot_posts_tap_name"
                style="@style/PageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="194dp"
                android:layout_marginRight="194dp"
                android:layout_marginBottom="17dp"
                android:includeFontPadding="false"
                android:textColor="@color/colorBlack"
                android:text="@string/modify_nickname" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/btnFinish"
                style="@style/DrawerName"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/complete"
                android:textColor="@color/colorMain" />

        </LinearLayout>

        <TextView
            style="@style/InvalidName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="43dp"
            android:text="@string/modify_nickname_info" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="29dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/slotImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/rectangle_17" />

            <EditText
                android:id="@+id/modify_nickname"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_cjkkr_medi"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:includeFontPadding="false"
                android:letterSpacing="0.2"
                android:text="하쿠"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="normal" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/firstLetter"-->
            <!--                    android:layout_width="19dp"-->
            <!--                    android:layout_height="29.2dp"-->
            <!--                    android:layout_marginStart="47dp"-->
            <!--                    android:layout_marginLeft="47dp"-->
            <!--                    android:layout_marginTop="37.7dp"-->
            <!--                    android:layout_marginBottom="40.1dp"-->
            <!--                    android:fontFamily="@font/noto_sans_cjkkr_medi"-->
            <!--                    android:gravity="center_horizontal"-->
            <!--                    android:includeFontPadding="false"-->
            <!--                    android:letterSpacing="-0.02"-->
            <!--                    android:text=""-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:textStyle="normal" />-->

            <!--                <TextView-->
            <!--                    android:id="@+id/secondLetter"-->
            <!--                    android:layout_width="19dp"-->
            <!--                    android:layout_height="29.2dp"-->
            <!--                    android:layout_marginStart="25dp"-->
            <!--                    android:layout_marginLeft="25dp"-->
            <!--                    android:layout_marginTop="37.7dp"-->
            <!--                    android:layout_marginBottom="40.1dp"-->
            <!--                    android:fontFamily="@font/noto_sans_cjkkr_medi"-->
            <!--                    android:gravity="center_horizontal"-->
            <!--                    android:includeFontPadding="false"-->
            <!--                    android:letterSpacing="-0.02"-->
            <!--                    android:text=""-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:textStyle="normal"/>-->

            <!--                <TextView-->
            <!--                    android:id="@+id/thirdLetter"-->
            <!--                    android:layout_width="19dp"-->
            <!--                    android:layout_height="29.2dp"-->
            <!--                    android:layout_marginStart="25dp"-->
            <!--                    android:layout_marginLeft="25dp"-->
            <!--                    android:layout_marginTop="37.7dp"-->
            <!--                    android:layout_marginBottom="40.1dp"-->
            <!--                    android:fontFamily="@font/noto_sans_cjkkr_medi"-->
            <!--                    android:gravity="center_horizontal"-->
            <!--                    android:includeFontPadding="false"-->
            <!--                    android:letterSpacing="-0.02"-->
            <!--                    android:text=""-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:textStyle="normal"/>-->

            <!--                <TextView-->
            <!--                    android:id="@+id/fourthLetter"-->
            <!--                    android:layout_width="19dp"-->
            <!--                    android:layout_height="29.2dp"-->
            <!--                    android:layout_marginStart="25dp"-->
            <!--                    android:layout_marginLeft="25dp"-->
            <!--                    android:layout_marginTop="37.7dp"-->
            <!--                    android:layout_marginBottom="40.1dp"-->
            <!--                    android:fontFamily="@font/noto_sans_cjkkr_medi"-->
            <!--                    android:gravity="center_horizontal"-->
            <!--                    android:includeFontPadding="false"-->
            <!--                    android:letterSpacing="-0.02"-->
            <!--                    android:text=""-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:textStyle="normal"/>-->

            <!--                <TextView-->
            <!--                    android:id="@+id/fifthLetter"-->
            <!--                    android:layout_width="19dp"-->
            <!--                    android:layout_height="29.2dp"-->
            <!--                    android:layout_marginStart="25dp"-->
            <!--                    android:layout_marginLeft="25dp"-->
            <!--                    android:layout_marginTop="37.7dp"-->
            <!--                    android:layout_marginBottom="40.1dp"-->
            <!--                    android:fontFamily="@font/noto_sans_cjkkr_medi"-->
            <!--                    android:gravity="center_horizontal"-->
            <!--                    android:includeFontPadding="false"-->
            <!--                    android:letterSpacing="-0.02"-->
            <!--                    android:text=""-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:textStyle="normal"/>-->

            <!--                <TextView-->
            <!--                    android:id="@+id/sixthLetter"-->
            <!--                    android:layout_width="19dp"-->
            <!--                    android:layout_height="29.2dp"-->
            <!--                    android:layout_marginStart="25dp"-->
            <!--                    android:layout_marginLeft="25dp"-->
            <!--                    android:layout_marginTop="37.7dp"-->
            <!--                    android:layout_marginBottom="40.1dp"-->
            <!--                    android:fontFamily="@font/noto_sans_cjkkr_medi"-->
            <!--                    android:gravity="center_horizontal"-->
            <!--                    android:includeFontPadding="false"-->
            <!--                    android:letterSpacing="-0.02"-->
            <!--                    android:text=" "-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:textStyle="normal"/>-->
            <!--            </LinearLayout>-->

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnModifyFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bottom_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
